chore: remove root route
